# Software-Development-Project

./: .gitignore  CMakeLists.txt  JoinArray.cpp  JoinArray.h  Makefile  Priority_Queue.cpp  Priority_Queue.h  README  ResultsArray.cpp  ResultsArray.h  SQL.cpp  SQL.h  SQLInfo.cpp  SQLInfo.h  TranslateSQL.cpp  TranslateSQL.h  array.cpp  array.h  bitmap.h  do_query.cpp  do_query.h  hashtable.cpp  hashtable.h  inpoutFunctions.cpp  inpoutFunctionsLibrary.h  inputFunctions.cpp  inputFunctions.h  job.cpp  job.h  jobscheduler.cpp  jobscheduler.h  join_preds.cpp  join_preds.h  list.cpp  list.h  main.cpp  queriesExecutor.cpp  queriesExecutor.h  query.cpp  query.h  (+33 more)
workloads/small/: small.work
